Updated URL to AlbaTherium's

--- a/retype.yml
+++ b/retype.yml
@@ -1,6 +1,6 @@
 input: .
 output: .retype
-url: https://kram-capital.github.io/alba-docs-INDICATOR-NAME/
+url: https://AlbaTherium.github.io/alba-docs-INDICATOR-NAME/
 branding:
   title: INDICATOR-NAME
   label: Docs
